<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="num_of_Pax">Num of Pax</string>
    <string name="service">SERVICE</string>
    <string name="gst">GST</string>
    <string name="discount">Discount (%)</string>
    <string name="cash">Cash</string>
    <string name="payNow">PayNow</string>
    <string name="split">Split</string>
    <string name="reset">Reset</string>
    <string name="totalBill">Total Bill: </string>
    <string name="eachPays">Each Pays: </string>


</resources>